
  Zstd.compress: Bytes.T -> Bytes.T
  Zstd.uncompress: Bytes.T -> Bytes.T


*** System ***

* The command-line tool "isabelle update" is now directly based on
"isabelle build" instead of "isabelle dump". Thus it has become more
scalable, and supports most options from "isabelle build". Partial
builds are supported as well, e.g. "isabelle update -n -a".

* Isabelle/Scala provides generic support for XZ and Zstd compression,
via Compress.Options and Compress.Cache. Bytes.uncompress automatically
detects the compression scheme.

* The command-line tools "isabelle dotnet_setup" and "isabelle dotnet"
support the Dotnet platform (.NET), which includes Fsharp (F#). This
works uniformly on all Isabelle OS platforms, even as cross-platform
installation: "isabelle dotnet_setup -p linux_arm,linux,macos,windows".

Example:

  isabelle dotnet_setup
  isabelle dotnet fsi
  > 1 + 1;;
  > #quit;;

* The headless PIDE server (e.g. command-line tool "isabelle server")
now observes the option "show_states" as given in the server command
"session_start". If enabled, the server command "use_theories" will
expose proof state output via its "messages" field.



New in Isabelle2022 (October 2022)
----------------------------------

*** General ***

* The instantiation of schematic goals is now displayed explicitly as a
list of variable assignments. This works for proof state output, and at
the end of a toplevel proof. In rare situations, a proof command or
proof method may violate the intended goal discipline, by not producing
an instance of the original goal, but there is only a warning, no hard
error.

* Session ROOT files support 'chapter_definition' entries (optional).
This allows to associate additional information as follows:

  - "chapter_definition NAME (GROUPS)" to make all sessions that belong
  to this chapter members of the given groups

  - "chapter_definition NAME description TEXT" to provide a description
  for presentation purposes
